--- a/TextRPG_V2/TextRPG_V2.csproj
+++ b/TextRPG_V2/TextRPG_V2.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Items\HealingPotion.cs" />
     <Compile Include="Items\Item.cs" />
     <Compile Include="Items\Sword.cs" />
+    <Compile Include="Managers\QuestManager.cs" />
     <Compile Include="Managers\EntityManager.cs" />
     <Compile Include="Managers\GameManager.cs" />
     <Compile Include="Managers\ItemManager.cs" />
