--- a/TextRPG_V2/FirstPlayable_CalebWolthers_22012024.csproj
+++ b/TextRPG_V2/FirstPlayable_CalebWolthers_22012024.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{84CE4CAA-47CD-486B-8E5D-92D3BAC2765D}</ProjectGuid>
+    <ProjectGuid>{BED6D8AC-31DA-44B1-8A9C-99BE9632DDE0}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TextRPG_V2</RootNamespace>
-    <AssemblyName>TextRPG_V2</AssemblyName>
+    <RootNamespace>FirstPlayable_CalebWolthers_22012024</RootNamespace>
+    <AssemblyName>FirstPlayable_CalebWolthers_22012024</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -25,17 +25,18 @@
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>full</DebugType>
+    <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DebugSymbols>true</DebugSymbols>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,43 +45,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entities\Enemies\Mage.cs" />
-    <Compile Include="Entities\Enemies\Skeleton.cs" />
-    <Compile Include="Entities\Enemies\Warrior.cs" />
-    <Compile Include="Entities\Entity.cs" />
-    <Compile Include="Entities\EntityTurn.cs" />
-    <Compile Include="Entities\HealthSystem.cs" />
-    <Compile Include="Entities\Player\Player.cs" />
-    <Compile Include="GlobalVariables.cs" />
-    <Compile Include="Items\BootsOfSpeed.cs" />
-    <Compile Include="Items\HealingPotion.cs" />
-    <Compile Include="Items\Item.cs" />
-    <Compile Include="Items\Sword.cs" />
-    <Compile Include="Managers\QuestManager.cs" />
-    <Compile Include="Managers\EntityManager.cs" />
-    <Compile Include="Managers\GameManager.cs" />
-    <Compile Include="Managers\ItemManager.cs" />
-    <Compile Include="Managers\UIManager.cs" />
-    <Compile Include="Maps\Map.cs" />
-    <Compile Include="Maps\Tile.cs" />
+    <Compile Include="Enemy.cs" />
+    <Compile Include="EnemyDragon.cs" />
+    <Compile Include="EnemyGoblin.cs" />
+    <Compile Include="EnemyManager.cs" />
+    <Compile Include="EnemyMinotaur.cs" />
+    <Compile Include="EnemyOrc.cs" />
+    <Compile Include="GameManager.cs" />
+    <Compile Include="HealthSystem.cs" />
+    <Compile Include="Item.cs" />
+    <Compile Include="ItemFreeze.cs" />
+    <Compile Include="ItemHealth.cs" />
+    <Compile Include="ItemInvincible.cs" />
+    <Compile Include="ItemManager.cs" />
+    <Compile Include="Map.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Entities\Stat.cs" />
-    <Compile Include="Shop-Quests\Quest.cs" />
-    <Compile Include="Shop-Quests\Shop.cs" />
-    <Compile Include="UIElements\Camera.cs" />
-    <Compile Include="UIElements\QuestWindow.cs" />
-    <Compile Include="UIElements\ControlsWindow.cs" />
-    <Compile Include="UIElements\EventLog.cs" />
-    <Compile Include="UIElements\StatWindow.cs" />
-    <Compile Include="UIElements\UIWindow.cs" />
+    <Compile Include="Settings.cs" />
+    <Compile Include="UI.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <ItemGroup>
-    <Content Include="Maps\MapFiles\Dungeon.txt">
+    <Content Include="Map1.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
