new shop manager and shop txt, updated map class

--- a/WalkOfLegendsLegacy/FirstPlayable_CalebWolthers_22012024.csproj
+++ b/WalkOfLegendsLegacy/FirstPlayable_CalebWolthers_22012024.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ShopManager.cs" />
     <Compile Include="QuestManager.cs" />
     <Compile Include="Enemy.cs" />
     <Compile Include="EnemyDragon.cs" />
